fixed current member feed spacing

--- a/app/assets/stylesheets/members.css.scss
+++ b/app/assets/stylesheets/members.css.scss
@@ -22,7 +22,7 @@
         height: auto;
         display: inline-block;
         padding: 0px;
-        margin: 10px;
+        margin: 0px 10px 20px 10px;
         background-color: $main-color;
         border: 5px $main-color solid;
         border-radius: 5px;
